fix code block scrollbar

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -171,8 +171,7 @@ TABLE OF CONTENTS
 			padding: 0 !important;
 
 			code {
-				padding: 1.125em 1.25rem !important;
-				margin-right: 2.75rem;
+				padding: 1.125em 3.875rem 1.25rem 1.25rem !important;
 
 				.hljs-comment {
 					color: #bbb !important;
